# Skaiciuotuvas

./: .gitignore  CMakeLists.txt  EilAnalizator.cpp  EilAnalizator.hpp  README.md  main.cpp  main.hpp
